--- a/sass/layout/_feature-list.scss
+++ b/sass/layout/_feature-list.scss
@@ -29,7 +29,7 @@
 
 .title-feature {
   text-align: center;
-  color: $primary-title-color;
+  color: $primary-text-color;
   font-weight: 700;
   line-height: 1.1;
   margin-bottom: 10px;
@@ -47,7 +47,7 @@
   margin-bottom: 30px;
   padding: 25px 0;
   border-radius: 4px;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
 }
 .feature__icon {
   width: 70px;
