--- a/sass/layout/_hero-container.scss
+++ b/sass/layout/_hero-container.scss
@@ -19,7 +19,7 @@
   @media screen and (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: url("./images/hero/hero480@2x.jpg");
+    background-image: url("../images/hero/hero480@2x.jpg");
   }
 
   @media screen and (min-width: $tablet) {
@@ -27,12 +27,12 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("./images/hero/hero768@1x.jpg");
+      url("../images/hero/hero768@1x.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url("./images/hero/hero768@2x.jpg");
+      background-image: url("../images/hero/hero768@2x.jpg");
     }
   }
 
@@ -45,12 +45,12 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("./images/hero/hero1200@1x.jpg");
+      url("../images/hero/hero1200@1x.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
-      background-image: url("./images/hero/hero1200@2x.jpg");
+      background-image: url("../images/hero/hero1200@2x.jpg");
     }
   }
 
