--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,7 @@ img {
 }
 
 .burger {
-  background-color: #757575;
+  background-color: #ffffff;
   border: none;
   cursor: pointer;
   padding: 0;
@@ -380,7 +380,7 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  background-color: #757575;
+  background-color: #ffffff;
   transition: opasity 250ms linear, visibility 250ms linear;
 }
 
@@ -394,7 +394,7 @@ img {
   position: absolute;
   top: 10px;
   right: 15px;
-  background-color: #757575;
+  background-color: #212121;
   border: none;
   cursor: pointer;
   padding: 0;
@@ -422,7 +422,7 @@ img {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color: #212121;
 }
 
 .mobile-nav__link:hover, .mobile-nav__link:focus {
@@ -667,19 +667,19 @@ img {
 
 @media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url("./images/hero/hero480@2x.jpg");
+    background-image: url("../images/hero/hero480@2x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero-section {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./images/hero/hero768@1x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero768@1x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url("./images/hero/hero768@2x.jpg");
+    background-image: url("../images/hero/hero768@2x.jpg");
   }
 }
 
@@ -689,13 +689,13 @@ img {
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./images/hero/hero1200@1x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero1200@1x.jpg");
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url("./images/hero/hero1200@2x.jpg");
+    background-image: url("../images/hero/hero1200@2x.jpg");
   }
 }
 
@@ -793,5 +793,47 @@ img {
 .feature__icon {
   width: 70px;
   height: 70px;
+}
+
+@media screen and (max-width: 1199px) {
+  .business {
+    display: none;
+  }
+}
+
+.section--other-padding {
+  padding-top: 0px;
+}
+
+.business-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.business-list__text {
+  position: absolute;
+  bottom: 27px;
+  left: 83px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.business-list__work {
+  position: relative;
+}
+
+.business-list__work::before {
+  display: block;
+  position: absolute;
+  content: "";
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
 }
 /*# sourceMappingURL=main.css.map */
