--- a/css/main.css
+++ b/css/main.css
@@ -836,4 +836,213 @@ img {
   height: 70px;
   background: rgba(47, 48, 58, 0.8);
 }
+
+.section-title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.box-list {
+  list-style: none;
+}
+
+.box-item {
+  margin-right: 30px;
+  position: relative;
+}
+
+.box-item:last-child {
+  margin-right: 0;
+}
+
+.box-text {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: var(--primary-title-color);
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.box-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 370px;
+  height: 70px;
+}
+
+.section-bg {
+  background-color: #f5f4fa;
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+
+.team-list {
+  list-style: none;
+}
+
+.team-item {
+  margin-right: 30px;
+  display: block;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-item:last-child {
+  margin-right: 0;
+}
+
+.team-card {
+  background-color: #ffffff;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-right: auto;
+}
+
+.team-name {
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--primary-text-color);
+}
+
+.team-card-text {
+  font-family: Roboto, sans-serif;
+  color: var(--secondary-text-color);
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-top: 10px;
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+.team-social {
+  display: flex;
+  margin-top: 16px;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.social-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+
+.social-item:last-child {
+  margin-right: 0;
+}
+
+.social-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  fill: #afb1b8;
+  transition: background-color 250ms linear;
+}
+
+.social-link:hover, .social-link:focus {
+  fill: var(--primary-title-color);
+  background-color: var(--accent-color);
+}
+
+.team-icon {
+  transition: fill 250ms linear;
+}
+
+.team-icon:hover, .team-icon:focus {
+  background-color: var(--accent-color);
+}
+
+.client-list {
+  display: flex;
+}
+
+@media screen and (max-width: 767px) {
+  .client-list {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .client-list {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client-list {
+    margin: -15px;
+  }
+}
+
+.client-list .client-item {
+  display: flex;
+}
+
+@media screen and (max-width: 767px) {
+  .client-list .client-item {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .client-list .client-item {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client-list .client-item {
+    margin: -15px;
+  }
+}
+
+.client-list .client-item:last-child {
+  margin-right: 0;
+}
+
+.client-list .client-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 92px;
+  width: 170px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  fill: #afb1b8;
+  transition: border-color 250ms linear;
+}
+
+.client-list .client-box:hover, .client-list .client-box:focus {
+  fill: #2196f3;
+  border-color: #2196f3;
+}
+
+.client-list .client-icon {
+  width: 106px;
+  height: 60px;
+  transition: fill 250ms linear;
+  fill: #2196f3;
+  border-color: #2196f3;
+}
 /*# sourceMappingURL=main.css.map */
