--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,7 +1,7 @@
 body {
   text-decoration: none;
-  background-color: var(--primary-title-color);
-  color: var(--primary-text-color);
+  background-color: $primary-title-color;
+  color: $primary-text-color;
   font-family: Roboto, Raleway, sans-serif;
 }
 
@@ -15,6 +15,7 @@ h6 {
   margin: 0;
 }
 ul {
+  list-style: none;
   margin: 0;
   padding: 0;
 }
