--- a/sass/layout/_team-list.scss
+++ b/sass/layout/_team-list.scss
@@ -18,7 +18,7 @@
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: var(--primary-title-color);
+  color: $primary-title-color;
   background: rgba(47, 48, 58, 0.8);
 }
 .box-text {
@@ -37,6 +37,7 @@
   padding-top: 94px;
 }
 .team-list {
+  display: flex;
   list-style: none;
 }
 .team-item {
@@ -61,11 +62,11 @@
   font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 16px;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 .team-card-text {
   font-family: Roboto, sans-serif;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
   text-align: center;
   letter-spacing: 0.03em;
   margin-top: 10px;
@@ -103,7 +104,7 @@
   &:hover,
   &:focus {
     fill: var(--primary-title-color);
-    background-color: var(--accent-color);
+    background-color: $accent-color;
   }
 }
 .team-icon {
@@ -111,6 +112,6 @@
 
   &:hover,
   &:focus {
-    background-color: var(--accent-color);
+    background-color: $accent-color;
   }
 }
