--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,4 +1,4 @@
-.client-list {
+.clients-list {
   display: flex;
   @media screen and (max-width: 767px) {
     flex-wrap: wrap;
@@ -11,36 +11,43 @@
   @media screen and (min-width: $desktop) {
     margin: -15px;
   }
-}
-.client-item {
-  display: flex;
-  @media screen and (max-width: 767px) {
-    flex-wrap: wrap;
-    margin: -15px;
-  }
-  @media (min-width: $tablet) and (max-width: 1199px) {
-    flex-wrap: wrap;
-    margin: -15px;
-  }
-  @media screen and (min-width: $desktop) {
-    margin: -15px;
-  }
-}
-.client-item:last-child {
-  margin-right: 0;
-}
-.client-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  fill: #afb1b8;
-  transition: border-color 250ms linear;
 
-  &:hover,
-  &:focus {
-    fill: $accent-color;
+  &__item {
+    @media screen and (max-width: 767px) {
+      margin: 15px;
+      flex-basis: calc((100% - 60px) / 2);
+    }
+    @media (min-width: $tablet) and (max-width: 1199px) {
+      margin: 15px;
+      flex-basis: calc((100% - 90px) / 3);
+    }
+    @media screen and (min-width: $desktop) {
+      margin: 15px;
+      flex-basis: calc((100% - 150px) / 6);
+    }
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    color: #afb1b8;
+    transition: color 250ms linear, border 250ms linear;
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+      border: 1px solid $accent-color;
+    }
+  }
+
+  &__icon {
+    width: 106px;
+    fill: currentColor;
   }
 }
+
+// .clients-list .clients-list__item + .clients-list__item {margin-left: 30px;}
