--- a/css/main.css
+++ b/css/main.css
@@ -1081,7 +1081,7 @@ img {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-size: 14px;
-  color: var(--primary-title-color);
+  color: #ffffff;
   text-decoration: none;
   list-style: none;
   display: block;
@@ -1101,12 +1101,12 @@ img {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--primary-title-color);
+  color: #ffffff;
   text-decoration: none;
 }
 
 .contacts__mail {
-  color: var(--secondary-text-color);
+  color: #757575;
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -1117,11 +1117,11 @@ img {
 }
 
 .contacts__mail:hover, .contacts__mail:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .contacts__tel {
-  color: var(--secondary-text-color);
+  color: #757575;
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -1132,7 +1132,7 @@ img {
 }
 
 .contacts__tel:hover, .contacts__tel:focus {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 @media (min-width: 768px) and (max-width: 1199px) {
@@ -1225,8 +1225,8 @@ img {
 }
 
 .footer-social__link:hover, .footer-social__link:focus {
-  fill: var(--primary-title-color);
-  background-color: var(--accent-color);
+  fill: #ffffff;
+  background-color: #2196f3;
 }
 
 .footer-social__list:last-child {
@@ -1234,12 +1234,12 @@ img {
 }
 
 .footer-social__icon {
-  fill: var(--primary-title-color);
+  fill: #ffffff;
   transition: fill 250ms linear;
 }
 
 .footer-social__icon:hover, .footer-social__icon:focus {
-  fill: var(--primary-title-color);
+  fill: #ffffff;
 }
 
 @media (min-width: 768px) and (max-width: 1199px) {
@@ -1282,7 +1282,7 @@ img {
   letter-spacing: 0.03em;
   margin-bottom: 20px;
   justify-content: flex-end;
-  color: var(--primary-title-color);
+  color: #ffffff;
 }
 
 .footer-form__input {
@@ -1294,7 +1294,7 @@ img {
   background: #2f303a;
   margin-right: 12px;
   padding-left: 16px;
-  color: var(--primary-title-color);
+  color: #ffffff;
 }
 
 .footer-form__input:hover, .footer-form__input:focus {
@@ -1316,7 +1316,7 @@ img {
   background: #2196f3;
   border-radius: 4px;
   border-color: transparent;
-  color: var(--primary-title-color);
+  color: #ffffff;
   transition: box-shadow 250ms linear, background-color 250ms linear;
 }
 
