--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,162 +1,142 @@
-// .filtr-list {
-//     list-style: none;
-//     display: flex;
-//     justify-content: center;
-//     margin-bottom: 50px;
-//     margin-right: auto;
-//     margin-left: auto;
-//     text-align: left;
-//   }
-//   .filtr-btn {
-//     background: #f5f4fa;
-//     margin-right: 8px;
-//   }
-//   .filtr-btn:last-child {
-//     margin-right: 0;
-//   }
-//   .btn {
-//     cursor: pointer;
-//     font-family: Roboto, sans-serif;
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 16px;
-//     line-height: 1.62;
-//     color: var(--primary-text-color);
-//     background: #f5f4fa;
-//     list-style: none;
-//     border: none;
-//   }
-//   .btn {
-//     display: block;
-//     padding-top: 6px;
-//     padding-bottom: 6px;
-//     padding-right: 22px;
-//     padding-left: 22px;
-//     align-items: center;
-//     border-radius: 4px;
-//     transition: color 250ms linear, background-color 250ms linear,
-//       box-shadow 250ms linear;
-  
-//   &:hover,
-//   &:focus {
-//     background-color: var(--accent-color);
-//     color: var(--primary-title-color);
-//     border-radius: 4px;
-//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-//       0px 2px 2px rgba(0, 0, 0, 0.12);}
-//   }
-//   .btn-active {
-//     cursor: pointer;
-//     font-family: Roboto, sans-serif;
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 16px;
-//     line-height: 1.62;
-//     color: var(--primary-title-color);
-//     background: var(--accent-color);
-//     list-style: none;
-//     border: none;
-//     border-radius: 4px;
-//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-//       0px 2px 2px rgba(0, 0, 0, 0.12);
-//   }
-  
-//   .btn-active {
-//     display: block;
-//     padding-top: 6px;
-//     padding-bottom: 6px;
-//     padding-right: 22px;
-//     padding-left: 22px;
-//   }
-//   .flex-container {
-//     display: flex;
-//     flex-wrap: wrap;
-//     text-decoration: none;
-//   }
-//   .flex-element {
-//     width: 370px;
-//     margin-right: 30px;
-//     margin-bottom: 30px;
-//     list-style: none;
-//     transition: box-shadow 250ms linear;
-  
-//   &:hover {
-//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-//       1px 4px 6px rgba(0, 0, 0, 0.16);}
-//   }
-//   .flex-element:nth-child(3n) {
-//     margin-right: 0;
-//   }
-//   .flex-element:nth-last-child(-n + 3) {
-//     margin-bottom: 0;
-//   }
-//   .project-overlay {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     color: var(--primary-title-color);
-//     background: rgba(33, 150, 243, 0.9);
-//     height: 100%;
-//     padding: 63px 24px;
-//   }
-//   .project-overlay {
-//     font-family: Roboto;
-//     font-size: 18px;
-//     line-height: 1.56;
-//     letter-spacing: 0.03em;
-//     transform: translateY(100%);
-//     transition: transform 250ms linear;
-//   }
-//   .project-link {
-//     display: block;
-//     text-decoration: none;
-//     color: var(--primary-text-color);
-//     border-color: rgba(238, 238, 238, 1);
-//     transition: box-shadow 250ms linear;
-  
-//     &:hover .project-overlay,
-//     &:focus .project-overlay {
-//         transform: translateY(0);}
-//     }
-//   .overlay {
-//     position: relative;
-//     display: flex;
-//     overflow: hidden;
-//   }
-//   .project-link:focus {
-//     box-sizing: border-box;
-//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-//       1px 4px 6px rgba(0, 0, 0, 0.16);
-//   }
-//   .portfolio-group {
-//     border: 1px solid #eeeeee;
-//     border-top: 0;
-//     padding-left: 24px;
-//     padding-right: 24px;
-//     padding-top: 20px;
-//     padding-bottom: 20px;
-//     list-style: none;
-//   }
-//   img {
-//     display: block;
-//   }
-//   .project-list {
-//     font-family: Roboto;
-//     font-style: normal;
-//     font-weight: 700;
-//     font-size: 18px;
-//     line-height: 2;
-//     letter-spacing: 0.06em;
-//     color: var(--primary-text-color);
-//     list-style: none;
-//   }
-//   .project-text {
-//     font-family: Roboto, sans-serif;
-//     font-style: normal;
-//     font-weight: normal;
-//     font-size: 16px;
-//     line-height: 1.87;
-//     color: #757575;
-//     list-style: none;
-//     text-decoration: none;
-//   }
+.filter {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
+}
+
+.filter__button {
+  font-weight: 500;
+  font-size: 16px;
+  padding: 6px 22px;
+  min-width: auto;
+  line-height: 1.6;
+  text-align: center;
+  background-color: #f5f4fa;
+  color: $primary-text-color;
+  border-radius: 4px;
+  border: none;
+  transition: background-color 250ms linear, color 250ms linear,
+    box-shadow 250ms linear;
+
+  &:hover,
+  &:focus {
+    color: $primary-title-color;
+    background-color: $accent-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+
+.filter__item {
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
+
+  @media screen and (max-width: 767px) {
+    &:nth-child(-n + 3) {
+      margin-bottom: 8px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    // &:not(:last-child) {
+    // margin-right: 8px;}
+    margin-bottom: 0;
+  }
+}
+
+.flex-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  &__item {
+    border: 1px solid #eeeeee;
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+      margin: 15px;
+      flex-basis: calc((100% - 60px) / 2);
+    }
+    @media screen and (min-width: 1200px) {
+      width: 370px;
+      flex-basis: calc((100% - 90px) / 3);
+    }
+  }
+
+  &__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  &__info {
+    padding: 20px 24px;
+  }
+
+  &__title {
+    color: $primary-text-color;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    margin-bottom: 4px;
+  }
+
+  &__description {
+    font-size: 16px;
+    line-height: 1.9;
+    color: $secondary-text-color;
+  }
+
+  &__link {
+    display: block;
+  }
+
+  &__item:hover,
+  &__item:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: box-shadow 250ms linear;
+  }
+
+  &__box {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    overflow: hidden;
+  }
+
+  &__text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 63px 24px;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: $primary-title-color;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
+    transition: transform 250ms linear;
+  }
+}
+
+.portfolio__link:hover .portfolio__text,
+.portfolio__link:focus .portfolio__text {
+  transform: translateY(0);
+}
