--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -136,7 +136,7 @@
   }
 }
 
-.portfolio__link:hover .portfolio__text,
-.portfolio__link:focus .portfolio__text {
+.flex-container__link:hover .flex-container__text,
+.flex-container__link:focus .flex-container__text {
   transform: translateY(0);
 }
