--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,137 +1,158 @@
-.form-label {
-    display: flex;
-    cursor: pointer;
-    flex-direction: column;
-    transition: border-color 250ms linear;
-    margin-bottom: 10px;
-  }
-  .form-comment{
-    margin-bottom: 20px;
-  }
-  .form-label input:focus,
-  .input-comment:focus {
-    border-color: var(--accent-color);
-    outline: none;
-  }
-  .input-image {
-    position: relative;
-    display: block;
-  }
-  .madal-checkbox-label {
-    display: flex;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  text-align: left;
+
+  &__title {
+    display: inline-block;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
     letter-spacing: 0.03em;
-    color: var(--secondary-text-color);
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
+    color: $primary-text-color;
+    margin-bottom: 12px;
+
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+    }
   }
-  .madal-checkbox-label::before {
-    content: "";
+}
+
+.modal-form__checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.modal-form__label {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
+
+  .modal-form & + & {
+    margin-top: 10px;
+  }
+}
+
+.modal-form__image{
+  display: block;
+  position: relative;
+  margin-top: 4px;
+}
+
+.modal-form__input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border 250ms linear;
+}
+
+.modal-form__input:focus,
+.modal-form__comment:focus {
+  outline: none;
+  border-color: $accent-color;
+}
+
+.modal-form__comment {
+  display: block;
+  width: 100%;
+  height: 120px;
+  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+  transition: border 250ms linear;
+
+  &::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+}
+
+.modal-form__icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  width: 18px;
+  height: 18px;
+  transform: translateY(-50%);
+  transition: fill 250ms linear;
+}
+
+.modal-form__input:focus + .modal-form__icon {
+  fill: $accent-color;
+}
+
+.modal-form__check {
+  font-size: 12px;
+  line-height: 1.16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71px;
+  }
+
+  &::before {
     display: block;
+    content: "";
     width: 16px;
     height: 15px;
-    border: 2px solid #303030;
-    cursor: pointer;
-    border-radius: 2px;
     margin-right: 7px;
-    transition: border-color 250ms linear, background-image 250ms linear,
-      background-color 250ms linear;
-  }
-  .madal-checkbox:checked + .madal-checkbox-label::before {
-    background-image: url(../images/iconcheck.svg);
-    background-color: var(--accent-color);
-    border-color: var(--accent-color);
-    background-repeat: no-repeat;
-    background-position: 50%;
-  }
-  .madal-checkbox:focus + .madal-checkbox-label::before {
-    border-color: var(--accent-color);
-  }
-  .form-label label {
-    font-size: 12px;
-    line-height: 1.17;
-    font-weight: 400;
-    letter-spacing: 0.01em;
-    color: var(--secondary-text-colr);
-  }
-  .form-label input {
-    width: 100%;
-    padding: 12px;
-    padding-left: 42px;
-    margin-top: 4px;
-    border-radius: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    transition: border-color 250ms linear;
-  }
-  .form-input:focus + .input-icon {
-    fill: var(--accent-color);
-  }
-  .input-icon {
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    left: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: currentColor;
-    transition: fill 250ms linear;
-  }
-  .input-comment {
-    padding: 12px 16px;
-    margin-top: 4px;
-    border-width: 1px;
-    border-color: rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
-    height: 120px;
-    transition: border-color 250ms linear;
-  }
-  .input-comment::placeholder{
-    color: var(--secondary-text-color)
-  }
-  .comment{
-    font-weight: 400;
-      font-size: 12px;
-      line-height: 1.17;
-      letter-spacing: 0.01em;
-      color: rgba(117, 117, 117, 0.5);
-      transition: border-color 250ms linear;
-  }
-  .form-policy {
-    display: flex;
-    justify-content: center;
-    transition: border-color 250ms linear;
-  }
-  .form-policy:hover .madal-checkbox-label::before,
-  .form-policy:focus .madal-checkbox-label::before{
-    border-color: var(--accent-color);
-  }
-  .agreement {
-    color: var(--accent-color);
-  }
-  .contact-form-btn {
-    color: var(--primary-title-color);
-    background-color: var(--accent-color);
-    font-weight: 700;
-    font-family: Roboto;
-    font-size: 16px;
-    line-height: 1.87;
-    border-radius: 4px;
-    width: 200px;
-    height: 50px;
+    background-image: url(../images/check-off.svg);
     cursor: pointer;
-    display: block;
-    margin: 0 auto;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: none;
-    transition: background-color 250ms linear, box-shadow 250ms linear;
+    transition: background-image 250ms linear;
   }
-  .contact-form-btn:hover,
-  .contact-form-btn:focus {
-    background-color: #188ce8;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.modal-form__link {
+  text-decoration: underline;
+}
+
+.modal-form__checkbox:checked + .modal-form__check::before {
+  background-image: url(/images/iconcheck.svg);
+}
+.modal-form__checkbox:focus + .modal-form__check::before {
+  fill: $accent-color;
+}
+
+.modal-form__button {
+  padding: 10px 55px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  align-self: center;
+
+  color: #ffffff;
+  background: $accent-color;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  transition: background-color 250ms linear;
+
+  &:hover,
+  &:focus {
+    background: #188ce8;
   }
+}
