--- a/sass/layout/_team-list.scss
+++ b/sass/layout/_team-list.scss
@@ -1,117 +1,72 @@
-.section-title {
-  text-align: center;
-  margin-bottom: 50px;
-}
-.box-list {
-  list-style: none;
-}
-.box-item {
-  margin-right: 30px;
-  position: relative;
-}
-.box-item:last-child {
-  margin-right: 0;
-}
-.box-text {
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  color: $primary-title-color;
-  background: rgba(47, 48, 58, 0.8);
-}
-.box-text {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 370px;
-  height: 70px;
-}
-.section-bg {
+.section--background {
   background-color: #f5f4fa;
-  padding-bottom: 94px;
-  padding-top: 94px;
 }
 .team-list {
-  display: flex;
-  list-style: none;
+  @media screen and (max-width: 767px) {
+    display: block;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__name {
+    color: $primary-text-color;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 10px;
+  }
 }
-.team-item {
-  margin-right: 30px;
-  display: block;
+
+.team-list__item {
+  background-color: $primary-title-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 120px) / 4);
+  }
 }
-.team-item:last-child {
-  margin-right: 0;
-}
-.team-card {
-  background-color: #ffffff;
-  text-align: center;
-  letter-spacing: 0.03em;
+
+.team-list__info {
   padding-top: 30px;
   padding-bottom: 30px;
-  padding-right: auto;
 }
-.team-name {
-  font-family: Roboto, sans-serif;
-  font-weight: 500;
+
+.team-list__text {
+  font-weight: 400;
   font-size: 16px;
-  color: $primary-text-color;
-}
-.team-card-text {
-  font-family: Roboto, sans-serif;
-  color: $secondary-text-color;
+  line-height: 1.2;
   text-align: center;
-  letter-spacing: 0.03em;
-  margin-top: 10px;
+  color: #757575;
 }
-.social-list {
-  display: flex;
-  justify-content: center;
-  list-style: none;
-}
-.team-social {
-  display: flex;
+.team-list__network {
   margin-top: 16px;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
 }
-.social-item {
-  width: 44px;
-  height: 44px;
-  margin-right: 10px;
-}
-.social-item:last-child {
-  margin-right: 0;
-}
-.social-link {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  fill: #afb1b8;
-  transition: background-color 250ms linear;
 
-  &:hover,
-  &:focus {
-    fill: var(--primary-title-color);
-    background-color: $accent-color;
-  }
+.team-social__link:hover,
+.team-social__link:focus {
+  background-color: $accent-color;
 }
-.team-icon {
-  transition: fill 250ms linear;
 
-  &:hover,
-  &:focus {
-    background-color: $accent-color;
-  }
+.tean-social__link:hover .team-social__icon,
+.team-social__link:focus .team-social__icon {
+  fill: $primary-title-color;
 }
