--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,8 @@
 @import "./components/backdrop";
 @import "./components/modal-form";
 @import "./components/mobile-menu";
+@import "./components/section-title";
+@import "./components/social";
 
 //LAYOUT
 @import "./layout/header";
