--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,7 +5,10 @@
   font-weight: 700;
   font-size: 26px;
   text-decoration: none;
-  margin-right: 95px;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.2;
+  }
 }
 .web {
   color: $accent-color;
