--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -44,7 +44,7 @@
   }
 }
 
-.modal-form__image{
+.modal-form__image {
   display: block;
   position: relative;
   margin-top: 4px;
@@ -119,14 +119,14 @@
     width: 16px;
     height: 15px;
     margin-right: 7px;
-    background-image: url(../images/check-off.svg);
-    cursor: pointer;
+    background-image: url(/images/iconcheck.svg);
     transition: background-image 250ms linear;
   }
 }
 
 .modal-form__link {
   text-decoration: underline;
+  color: $accent-color;
 }
 
 .modal-form__checkbox:checked + .modal-form__check::before {
@@ -156,17 +156,17 @@
     background: #188ce8;
   }
 }
-.modal-btn{
-   display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    
-    background-color: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
+.modal-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
