--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,21 @@
 .header {
   background-color: $primary-title-color;
   border: 1px solid #ececec;
-  margin: 0 auto;
 }
-.header-container {
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.main-nav {
   display: flex;
 }
 .site-nav {
   display: flex;
 
+  &--margin {
+    margin-left: 93px;
+  }
   @media screen and (max-width: 767px) {
     display: none;
   }
@@ -16,15 +23,16 @@
     margin-left: 88px;
   }
 }
+
 .site-nav__item {
   display: inline-flex;
-  margin-right: 50px;
   vertical-align: middle;
   position: relative;
 }
-.site-nav__item:last-child {
-  margin-right: 0;
+.site-nav .site-nav__item + .site-nav__item {
+  margin-left: 50px;
 }
+
 .site-nav__link--current {
   font-family: Roboto;
   font-weight: 500;
@@ -66,6 +74,7 @@
   }
 }
 .contact-nav {
+  
   @media screen and (max-width: 767px) {
     display: none;
   }
@@ -87,16 +96,7 @@
     margin-left: 30px;
   }
 }
-.contact-nav__item {
-  margin-right: 30px;
-}
-.contact-nav__item {
-  align-items: center;
-  color: $secondary-text-color;
-}
 .contact-nav__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: $secondary-text-color;
   font-family: Roboto, sans-serif;
   font-weight: 500;
@@ -118,12 +118,9 @@
 }
 .contact-nav__link {
   display: flex;
-  justify-content: center;
   transition: color 250ms linear;
 }
-.contact-nav__item:last-child {
-  margin-right: 0;
-}
+
 .contact-nav__icon {
   margin-right: 10px;
   fill: currentColor;
@@ -132,7 +129,6 @@
 
   @media (min-width: $tablet) and (max-width: 1199px) {
     width: 14px;
-    height: 10px;
   }
 
   &:hover,
